# cookiecutter-python

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: lint.yaml
hooks/: post_gen_project.py
requirements/: requirements.txt
setup/: setup.py  setup.sh
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.sh  template-pyproject.toml
