[tool.poetry]
name = "cookiecutter-python"
version = "1.0.0"
description = "A Python Cookiecutter template with Poetry as a dependency manager"
authors = ["Gurashish Singh <gurashish1singh@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5"
isort = "^5.5"
black = "^22.9"
pre-commit = "^2.20"
flake8-bugbear = "^22"
lizard = "^1.17"

[tool.black]
line-length = 100

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true
quiet = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
